force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__AdvancementType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdvancementType__c</fullName>
    <label>Advancement Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdvancementType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>