force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__ContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactId__c</fullName>
    <label>Contact Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>