force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__GatewayReference__c.field-meta.xml
<CustomField>
    <fullName>ssot__GatewayReference__c</fullName>
    <label>Gateway Reference</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GatewayReference</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>