force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__GenerationalCohort__c.field-meta.xml
<CustomField>
    <fullName>ssot__GenerationalCohort__c</fullName>
    <label>Generational Cohort</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GenerationalCohort</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>