force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__LastGatewayProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastGatewayProcessedDate__c</fullName>
    <label>Last Gateway Processed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastGatewayProcessedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>