force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__LastGatewayResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastGatewayResponseCode__c</fullName>
    <label>Last Gateway Response Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastGatewayResponseCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>