force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__rel_1732247644352_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732247644352_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftTransaction_PaymentInstrumentId__rel</label>
    <referenceTo>ssot__PaymentInstrument__dlm</referenceTo>
    <relationshipLabel>GiftTransaction_PaymentInstrumentId__rel</relationshipLabel>
    <relationshipName>rel_1732247644352_end</relationshipName>
    <type>Lookup</type>
</CustomField>