force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__rel_1732247650960_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732247650960_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftTransaction_ContactId_map_Indivi_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>GiftTransaction_ContactId_map_Indivi_rel</relationshipLabel>
    <relationshipName>rel_1732247650960_end</relationshipName>
    <type>Lookup</type>
</CustomField>