force-app/main/default/objects/ssot__GiftTransaction__dlm/fields/ssot__TaxDeductionAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxDeductionAmount__c</fullName>
    <label>Tax Deduction</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxDeductionAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>